--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -10,6 +10,7 @@ brew "terminal-notifier"
 # Download YouTube videos from the command-line
 brew "youtube-dl"
 brew "python"
+brew "google-cloud-sdk"
 brew "kid3"
 brew "awscli"
 brew "hashicorp/tap/terraform"
