--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -4,9 +4,9 @@ tap "hashicorp/tap"
 # Play, record, convert, and stream audio and video
 # GitHub command-line tool
 brew "gh"
+brew "nvm"
 # Send macOS User Notifications from the command-line
 brew "terminal-notifier"
-# Download YouTube videos from the command-line
 brew "python"
 brew "hashicorp/tap/terraform"
 brew "zsh-history-substring-search"
