feat: update webstorm

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -9,3 +9,5 @@ brew "hashicorp/tap/terraform"
 brew "zsh-history-substring-search"
 brew "cocoapods"
 brew "xcode-build-server"
+brew "xcbeautify"
+brew "swiftformat"
